projects/cms/employee-service/k8s-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: employee
  name: employee-svc
spec:
  ports:
    - port: 8012
      protocol: TCP
      targetPort: 8012
  selector:
    app: employee
